@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
+* [airmozilla] Fix extraction (#12670)
+
+
 version 2017.04.03
 
 Core
